adding css and js files.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
             crossorigin="anonymous"
         >
+        <link
+            href="/style.css"
+            rel="stylesheet"
+        >
+        <script src="/script.js"></script>
         <title>Nathan Mentley</title>
     </head>
     <body>
-        <h2>Natahn Mentley</h2>
+        <h2>Nathan Mentley</h2>
     </body>
 </html>
